# mkdocs-material-stem-template

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  plotly-iris-splom.json  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  sitemap.xml
.github/workflows/: deploy.yaml
blog/: index.html
blog/2024-04-30-ExperimentOne/: index.html
blog/2024-05-15-ExperimentTwo/: index.html
docs/: index.md  plotly.md
docs/blog/: 2024-04-30-ExperimentOne.md  2024-05-15-ExperimentTwo.md
docs/diagrams/: architecture.drawio
docs/notebooks/: example_notebook.ipynb
notebooks/example_notebook/: index.html
plotly/: index.html
reference/SUMMARY/: index.html
search/: search_index.json
src/mkdocs-material-stem-template/: main.py
